--- a/index.html
+++ b/index.html
@@ -9,15 +9,17 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;600;700&family=Inter:wght@300;400;500;600&display=swap" rel="stylesheet">
+    <link rel="icon" href="/favicon-ma-creme.ico" />
+
 
     <meta property="og:title" content="Ma Crème - Boulangerie Pâtisserie Restaurant" />
     <meta property="og:description" content="Boulangerie artisanale, pâtisserie fine et restaurant. Le goût du frais chaque matin." />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta property="og:image" content="/images/og-logo.png" />
 
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@Lovable" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta name="twitter:site" content="@MaCreme" />
+    <meta name="twitter:image" content="/images/twitter-logo.png" />
   </head>
 
   <body>
